// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introduction test should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin-left: -10px; margin-right: -10px;"
  >
    <div
      class="ant-col ant-col-15"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <h3
        class="ant-typography styledComponents__Title-sc-1ibvcih-4 QAroY"
      >
        Introduction
      </h3>
      <div
        class="ant-descriptions styledComponents__Descriptions-sc-xapams-0 gLqMJl"
      >
        <div
          class="ant-descriptions-view"
        >
          <table>
            <tbody>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Intent
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Client density vs Client throughput
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Category
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Wi-Fi Client Experience
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Venue
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      NewZone
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Status
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Applied
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Last update
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      06/26/2023 00:00
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <h4
        class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
      >
        Network Intent plays a crucial role in wireless network design
      </h4>
      <div
        class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
      >
        <div
          class="ant-typography"
        >
          <b>
            High number of clients in a dense network:
          </b>
           
          <span>
            In sparse networks with high client throughput, moderate interference is manageable due to optimized resource allocation, minimal competition for bandwidth, and strong signal strength. This allows for stable connections and satisfactory performance, outweighing drawbacks of interference.
          </span>
        </div>
        <div
          class="ant-typography"
        >
          <b>
            High client throughput in sparse network:
          </b>
           
          <span>
            In sparse networks with high client throughput, moderate interference is manageable due to optimized resource allocation, minimal competition for bandwidth, and strong signal strength. This allows for stable connections and satisfactory performance, outweighing drawbacks of interference.
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-7 ant-col-offset-2"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <div
        class="styledComponents__SideNotes-sc-ki2m8o-1 esivym"
      >
        <h4
          class="ant-typography"
        >
          Side Notes
        </h4>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Benefits
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            Low interference fosters improved throughput, lower latency, better signal quality, stable connections, enhanced user experience, longer battery life, efficient spectrum utilization, optimized channel usage, and reduced congestion, leading to higher data rates, higher SNR, consistent performance, and balanced network load.
          </div>
        </div>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Resources:
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            <a
              href="https://www.youtube.com/playlist?list=PLySwoo7u9-KJeAI4VY_2ha4r9tjnqE3Zi"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <svg
                    data-testid="LinkVideoIcon"
                  />
                </div>
                <div
                  class="ant-space-item"
                >
                  RUCKUS AI - AI-Driven RRM Demo
                </div>
              </div>
            </a>
            <a
              href="https://docs.commscope.com/bundle/ruckusai-userguide/page/GUID-5D18D735-6D9A-4847-9C6F-8F5091F9B171.html"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <svg
                    data-testid="LinkDocumentIcon"
                  />
                </div>
                <div
                  class="ant-space-item"
                >
                  RUCKUS AI User Guide
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`introduction test should render correctly when IS_MLISA_SA is true 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin-left: -10px; margin-right: -10px;"
  >
    <div
      class="ant-col ant-col-15"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <h3
        class="ant-typography styledComponents__Title-sc-1ibvcih-4 QAroY"
      >
        Introduction
      </h3>
      <div
        class="ant-descriptions styledComponents__Descriptions-sc-xapams-0 gLqMJl"
      >
        <div
          class="ant-descriptions-view"
        >
          <table>
            <tbody>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Intent
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Client density vs Client throughput
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Category
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Wi-Fi Client Experience
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Zone
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      NewZone
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Status
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      Applied
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="ant-descriptions-item-container"
                  >
                    <span
                      class="ant-descriptions-item-label"
                    >
                      Last update
                    </span>
                    <span
                      class="ant-descriptions-item-content"
                    >
                      06/26/2023 00:00
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <h4
        class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
      >
        Network Intent plays a crucial role in wireless network design
      </h4>
      <div
        class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
      >
        <div
          class="ant-typography"
        >
          <b>
            High number of clients in a dense network:
          </b>
           
          <span>
            In sparse networks with high client throughput, moderate interference is manageable due to optimized resource allocation, minimal competition for bandwidth, and strong signal strength. This allows for stable connections and satisfactory performance, outweighing drawbacks of interference.
          </span>
        </div>
        <div
          class="ant-typography"
        >
          <b>
            High client throughput in sparse network:
          </b>
           
          <span>
            In sparse networks with high client throughput, moderate interference is manageable due to optimized resource allocation, minimal competition for bandwidth, and strong signal strength. This allows for stable connections and satisfactory performance, outweighing drawbacks of interference.
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-7 ant-col-offset-2"
      style="padding-left: 10px; padding-right: 10px;"
    >
      <div
        class="styledComponents__SideNotes-sc-ki2m8o-1 esivym"
      >
        <h4
          class="ant-typography"
        >
          Side Notes
        </h4>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Benefits
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            Low interference fosters improved throughput, lower latency, better signal quality, stable connections, enhanced user experience, longer battery life, efficient spectrum utilization, optimized channel usage, and reduced congestion, leading to higher data rates, higher SNR, consistent performance, and balanced network load.
          </div>
        </div>
        <h4
          class="ant-typography styledComponents__Subtitle-sc-tz062a-0 styledComponents__Subtitle-sc-1ibvcih-5 fPbHyn dnpHFP"
        >
          Resources:
        </h4>
        <div
          class="styledComponents__TextContent-sc-1ibvcih-10 gqfdQa"
        >
          <div
            class="ant-typography"
          >
            <a
              href="https://www.youtube.com/playlist?list=PLySwoo7u9-KJeAI4VY_2ha4r9tjnqE3Zi"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <svg
                    data-testid="LinkVideoIcon"
                  />
                </div>
                <div
                  class="ant-space-item"
                >
                  RUCKUS AI - AI-Driven RRM Demo
                </div>
              </div>
            </a>
            <a
              href="https://docs.commscope.com/bundle/ruckusai-userguide/page/GUID-5D18D735-6D9A-4847-9C6F-8F5091F9B171.html"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <svg
                    data-testid="LinkDocumentIcon"
                  />
                </div>
                <div
                  class="ant-space-item"
                >
                  RUCKUS AI User Guide
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
